--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -20,20 +20,32 @@
   </head>
   <body>
     <div class="container">
-      <img class="seattle-logo" src="Vectors/SeattleCityLogo.svg" />
+      <div class="top-nav green-bg">
+        <img class="seattle-logo" src="Vectors/SeattleCityLogo.svg" />
 
-      <ul>
-        <li>About</li>
-        <li>Blog</li>
-        <li>History</li>
-        <li>Neighborhoods</li>
-        <li>Contact</li>
-      </ul>
+        <ul class="nav nav-pills pull-right">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">History</a>
+          </li>
+          <li>
+            <a href="#">Neighborhoods</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
 
       <img class="seattle-hero" src="Images/Seattle-Hero.jpg" />
 
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-10">
           <h1>A Brief History of Seattle</h1>
 
           <div>
