--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -120,7 +120,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row register">
         <div class="col-xs-6">
           <h1>Sign Up For Our Newsletter</h1>
           <div>
@@ -129,10 +129,29 @@
         </div>
 
         <div class="col-xs-6">
-          <form>
-            Name <input><input>
-            Email <input><input>
-            City <input><input>
+          <form class="form-horizontal">
+            <div class="contact-info">
+              <div class="form-group">
+                <label for="name" class="col-sm-1 control-label">Name</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="name"></input>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="email" class="col-sm-1 control-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="email"></input>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="city" class="col-sm-1 control-label">City</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="city"></input>
+                </div>
+              </div>
+            </div>
 
             <button type="submit">Submit</button>
           </form>
