fixing pike place header, but using impropeusing improper top nav

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -19,30 +19,30 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container-fluid pike-place-header"></div>
+    <div class="container-fluid pike-place-header">
+      <img src="Images/Seattle-Hero.jpg" />
+    </div>
 
-    <div class="container">
-      <div class="top-nav green-bg">
-        <img class="seattle-logo" src="Vectors/SeattleCityLogo.svg" />
+    <div class="top-nav green-bg">
+      <img class="seattle-logo" src="Vectors/SeattleCityLogo.svg" />
 
-        <ul class="nav nav-pills pull-right">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Blog</a>
-          </li>
-          <li>
-            <a href="#">History</a>
-          </li>
-          <li>
-            <a href="#">Neighborhoods</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="nav nav-pills pull-right">
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">History</a>
+        </li>
+        <li>
+          <a href="#">Neighborhoods</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </div>
 
     <div class="container">
