styling social icons. adding copyright

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -17,6 +17,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link href="Fonts/ss-social-regular/webfonts/ss-social-regular.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container-fluid pike-place-header">
@@ -174,23 +176,40 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <ul>
-              <li>About</li>
-              <li>Blog</li>
-              <li>History</li>
-              <li>Neighborhoods</li>
-              <li>Contact</li>
+            <ul class="nav nav-pills">
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Blog</a>
+              </li>
+              <li>
+                <a href="#">History</a>
+              </li>
+              <li>
+                <a href="#">Neighborhoods</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
             </ul>
           </div>
 
-          <div class="col-xs-6">
-            <ul>
-              <li>Facebook</li>
-              <li>Twitter</li>
-              <li>Instagram</li>
-              <li>Pinterest</li>
-              <li>YouTube</li>
+          <div class="col-xs-6 social">
+            <ul class="nav nav-pills pull-right">
+              <li><a href="#"><i class="ss-icon">facebook</i></a></li>
+              <li><a href="#"><i class="ss-icon">twitter</i></a></li>
+              <li><a href="#"><i class="ss-icon">instagram</i></a></li>
+              <li><a href="#"><i class="ss-icon">pinterest</i></a></li>
+              <li><a href="#"><i class="ss-icon">youtube</i></a></li>
             </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12">
+            (C)2015 Seattle History Code Challenge <br/>
+            All Rights Reserved
           </div>
         </div>
       </div>
