--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -175,35 +175,31 @@
     <div class="container-fluid bleedover footer">
       <div class="container">
         <div class="row">
-          <div class="col-xs-6">
-            <ul class="nav nav-pills">
-              <li>
-                <a href="#">About</a>
-              </li>
-              <li>
-                <a href="#">Blog</a>
-              </li>
-              <li>
-                <a href="#">History</a>
-              </li>
-              <li>
-                <a href="#">Neighborhoods</a>
-              </li>
-              <li>
-                <a href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="nav nav-pills pull-left">
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+            <li>
+              <a href="#">History</a>
+            </li>
+            <li>
+              <a href="#">Neighborhoods</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
 
-          <div class="col-xs-6 social">
-            <ul class="nav nav-pills pull-right">
-              <li><a href="#"><i class="ss-icon">facebook</i></a></li>
-              <li><a href="#"><i class="ss-icon">twitter</i></a></li>
-              <li><a href="#"><i class="ss-icon">instagram</i></a></li>
-              <li><a href="#"><i class="ss-icon">pinterest</i></a></li>
-              <li><a href="#"><i class="ss-icon">youtube</i></a></li>
-            </ul>
-          </div>
+          <ul class="nav nav-pills pull-right">
+            <li><a href="#"><i class="ss-icon">facebook</i></a></li>
+            <li><a href="#"><i class="ss-icon">twitter</i></a></li>
+            <li><a href="#"><i class="ss-icon">instagram</i></a></li>
+            <li><a href="#"><i class="ss-icon">pinterest</i></a></li>
+            <li><a href="#"><i class="ss-icon">youtube</i></a></li>
+          </ul>
         </div>
 
         <div class="row">
