working on hover states

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="neighborhood col-xs-4">
               <img src="Images/Ballard.jpg" />
-              <div class="name">Ballard</div>
+              <a href="#" class="name">Ballard</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
@@ -79,7 +79,7 @@
 
             <div class="neighborhood col-xs-4">
               <img src="Images/Greenlake.jpg" />
-              <div class="name">Greenlake</div>
+              <a href="#" class="name">Greenlake</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
@@ -87,7 +87,7 @@
 
             <div class="neighborhood col-xs-4">
               <img src="Images/Fremont.jpg" />
-              <div class="name">Fremont</div>
+              <a href="#" class="name">Fremont</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
@@ -97,7 +97,7 @@
           <div class="row">
             <div class="neighborhood col-xs-4">
               <img src="Images/Wallingford.jpg" />
-              <div class="name">Wallingford</div>
+              <a href="#" class="name">Wallingford</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
@@ -105,7 +105,7 @@
 
             <div class="neighborhood col-xs-4">
               <img src="Images/Queen Anne.jpg" />
-              <div class="name">Queen Anne</div>
+              <a href="#" class="name">Queen Anne</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
@@ -113,7 +113,7 @@
 
             <div class="neighborhood col-xs-4">
               <img src="Images/Magnolia.jpg" />
-              <div class="name">Magnolia</div>
+              <a href="#" class="name">Magnolia</a>
               <div class"description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
