using proper copyright symbol

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -204,7 +204,7 @@
 
         <div class="row">
           <div class="col-xs-12">
-            (C)2015 Seattle History Code Challenge <br/>
+            &copy; 2015 Seattle History Code Challenge <br/>
             All Rights Reserved
           </div>
         </div>
