modifying SVG file so background is transparent

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="top-nav green-bg">
-      <img class="seattle-logo" src="Vectors/SeattleCityLogo.svg" />
+      <object class="seattle-logo" data="Vectors/SeattleCityLogo.svg" type="image/svg+xml"></object>
 
       <ul class="nav nav-pills pull-right">
         <li>
