correctly positioning top nav and top banner

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -25,26 +25,28 @@
       <img src="Images/Seattle-Hero.jpg" />
     </div>
 
-    <div class="top-nav green-bg">
-      <object class="seattle-logo" data="Vectors/SeattleCityLogo.svg" type="image/svg+xml"></object>
+    <div class="container-fluid top-nav">
+      <div class="container green-bg">
+        <object class="seattle-logo pull-left" data="Vectors/SeattleCityLogo.svg" type="image/svg+xml"></object>
 
-      <ul class="nav nav-pills pull-right">
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-        <li>
-          <a href="#">History</a>
-        </li>
-        <li>
-          <a href="#">Neighborhoods</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
+        <ul class="nav nav-pills pull-right">
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">History</a>
+          </li>
+          <li>
+            <a href="#">Neighborhoods</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <div class="container">
