styling neighborhood area

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -74,7 +74,7 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Ballard.jpg" />
               <a href="#" class="name">Ballard</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
@@ -82,7 +82,7 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Greenlake.jpg" />
               <a href="#" class="name">Greenlake</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Fremont.jpg" />
               <a href="#" class="name">Fremont</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Wallingford.jpg" />
               <a href="#" class="name">Wallingford</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Queen Anne.jpg" />
               <a href="#" class="name">Queen Anne</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
@@ -116,13 +116,13 @@
             <div class="neighborhood col-xs-4">
               <img src="Images/Magnolia.jpg" />
               <a href="#" class="name">Magnolia</a>
-              <div class"description">
+              <div class="description">
                 Lorem ipsum blar de dolore. Shma den ya tulipsor ale carte. Soup dejour.
               </div>
             </div>
           </div>
 
-          <a>Load more neighborhoods.</a>
+          <a class="more-neighborhoods">Load more neighborhoods.</a>
         </div>
       </div>
     </div>
