using social circle symbols

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link href="Fonts/ss-social-regular/webfonts/ss-social-regular.css" rel="stylesheet" />
+    <link href="Fonts/ss-social-circle/webfonts/ss-social-circle.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container-fluid pike-place-header">
@@ -50,7 +50,7 @@
     </div>
 
     <div class="container">
-      <div class="row">
+      <div class="row history">
         <div class="col-xs-10">
           <h1>A Brief History of Seattle</h1>
 
@@ -195,7 +195,7 @@
             </li>
           </ul>
 
-          <ul class="nav nav-pills pull-right">
+          <ul class="nav nav-pills pull-right social">
             <li><a href="#"><i class="ss-icon">facebook</i></a></li>
             <li><a href="#"><i class="ss-icon">twitter</i></a></li>
             <li><a href="#"><i class="ss-icon">instagram</i></a></li>
