--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -135,8 +135,8 @@
         <div class="row register">
           <div class="col-xs-6">
             <h1>Sign Up For Our Newsletter</h1>
-            <div>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non mi porttitor, sollicitudin lorem finibus, semper ante. Curabitur efficitur libero orci, ac ultricies tellus placerat ac. Cras erat metus, elementum in libero a, interdum sollicitudin erat. Mauris justo turpis, iaculis at lacus ut, scelerisque euismod est. Nunc eu risus urna. Etiam et aliquet felis. Duis vulputate ipsum ac purus volutpat varius. Proin eu elit erat. Fusce enim orci, dapibus imperdiet purus at, tincidunt efficitur libero.
+            <div class="signup-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non mi porttitor, sollicitudin lorem finibus, semper ante. Curabitur efficitur libero orci, ac ultricies tellus placerat ac. Cras erat metus, elementum in libero a, interdum sollicitudin erat. Mauris justo turpis, iaculis at lacus ut, scelerisque euismod est.
             </div>
           </div>
 
@@ -144,22 +144,22 @@
             <form class="form-horizontal">
               <div class="contact-info">
                 <div class="form-group">
-                  <label for="name" class="col-sm-1 control-label">Name</label>
-                  <div class="col-sm-10">
+                  <label for="name" class="col-sm-2 control-label">Name</label>
+                  <div class="col-sm-9">
                     <input type="text" class="form-control" id="name"></input>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <label for="email" class="col-sm-1 control-label">Email</label>
-                  <div class="col-sm-10">
+                  <label for="email" class="col-sm-2 control-label">Email</label>
+                  <div class="col-sm-9">
                     <input type="email" class="form-control" id="email"></input>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <label for="city" class="col-sm-1 control-label">City</label>
-                  <div class="col-sm-10">
+                  <label for="city" class="col-sm-2 control-label">City</label>
+                  <div class="col-sm-9">
                     <input type="text" class="form-control" id="city"></input>
                   </div>
                 </div>
