implementing mobile support

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -73,7 +73,7 @@
           <h1>Neighborhoods</h1>
 
           <div class="row">
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Ballard.jpg" />
               <a href="#" class="name">Ballard</a>
               <div class="description">
@@ -81,7 +81,7 @@
               </div>
             </div>
 
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Greenlake.jpg" />
               <a href="#" class="name">Greenlake</a>
               <div class="description">
@@ -89,7 +89,7 @@
               </div>
             </div>
 
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Fremont.jpg" />
               <a href="#" class="name">Fremont</a>
               <div class="description">
@@ -99,7 +99,7 @@
           </div>
 
           <div class="row">
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Wallingford.jpg" />
               <a href="#" class="name">Wallingford</a>
               <div class="description">
@@ -107,7 +107,7 @@
               </div>
             </div>
 
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Queen Anne.jpg" />
               <a href="#" class="name">Queen Anne</a>
               <div class="description">
@@ -115,7 +115,7 @@
               </div>
             </div>
 
-            <div class="neighborhood col-xs-4">
+            <div class="neighborhood col-md-4 col-xs-12">
               <img src="Images/Magnolia.jpg" />
               <a href="#" class="name">Magnolia</a>
               <div class="description">
@@ -124,7 +124,7 @@
             </div>
           </div>
 
-          <a class="more-neighborhoods">Load more neighborhoods.</a>
+          <a class="more-neighborhoods" href="#">Load more neighborhoods.</a>
         </div>
       </div>
     </div>
@@ -133,14 +133,14 @@
     <div class="container-fluid green-bg bleedover">
       <div class="container">
         <div class="row register">
-          <div class="col-xs-6">
+          <div class="col-md-6 col-xs-12">
             <h1>Sign Up For Our Newsletter</h1>
             <div class="signup-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non mi porttitor, sollicitudin lorem finibus, semper ante. Curabitur efficitur libero orci, ac ultricies tellus placerat ac. Cras erat metus, elementum in libero a, interdum sollicitudin erat. Mauris justo turpis, iaculis at lacus ut, scelerisque euismod est.
             </div>
           </div>
 
-          <div class="col-xs-6">
+          <div class="col-md-6 col-xs-12">
             <form class="form-horizontal">
               <div class="contact-info">
                 <div class="form-group">
@@ -179,7 +179,7 @@
     <div class="container-fluid bleedover footer">
       <div class="container">
         <div class="row">
-          <ul class="nav nav-pills pull-left">
+          <ul class="nav nav-pills">
             <li>
               <a href="#">About</a>
             </li>
@@ -197,7 +197,14 @@
             </li>
           </ul>
 
-          <ul class="nav nav-pills pull-right social">
+          <div class="row">
+            <div class="col-xs-12">
+              &copy; 2015 Seattle History Code Challenge <br/>
+              All Rights Reserved
+            </div>
+          </div>
+
+          <ul class="nav nav-pills social">
             <li><a href="#"><i class="ss-icon">facebook</i></a></li>
             <li><a href="#"><i class="ss-icon">twitter</i></a></li>
             <li><a href="#"><i class="ss-icon">instagram</i></a></li>
@@ -206,12 +213,6 @@
           </ul>
         </div>
 
-        <div class="row">
-          <div class="col-xs-12">
-            &copy; 2015 Seattle History Code Challenge <br/>
-            All Rights Reserved
-          </div>
-        </div>
       </div>
     </div>
 
