configuring bottom footer for mobile

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -178,39 +178,33 @@
 
     <div class="container-fluid bleedover footer">
       <div class="container">
-        <div class="row">
-          <ul class="nav nav-pills">
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">Blog</a>
-            </li>
-            <li>
-              <a href="#">History</a>
-            </li>
-            <li>
-              <a href="#">Neighborhoods</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-          </ul>
 
-          <div class="row">
-            <div class="col-xs-12">
+        <div class="row">
+          <div class="col-md-6 col-xs-12">
+
+            <p class="links">
+              <a href="#">About</a>
+              <a href="#">Blog</a>
+              <a href="#">History</a>
+              <a href="#">Neighborhoods</a>
+              <a href="#">Contact</a>
+            </p>
+
+            <p class="copyright">
               &copy; 2015 Seattle History Code Challenge <br/>
               All Rights Reserved
-            </div>
-          </div>
+            </p>
 
-          <ul class="nav nav-pills social">
-            <li><a href="#"><i class="ss-icon">facebook</i></a></li>
-            <li><a href="#"><i class="ss-icon">twitter</i></a></li>
-            <li><a href="#"><i class="ss-icon">instagram</i></a></li>
-            <li><a href="#"><i class="ss-icon">pinterest</i></a></li>
-            <li><a href="#"><i class="ss-icon">youtube</i></a></li>
-          </ul>
+          </div>
+          <div class="col-md-6 col-xs-12 text-center social">
+
+            <a href="#"><i class="ss-icon">facebook</i></a>
+            <a href="#"><i class="ss-icon">twitter</i></a>
+            <a href="#"><i class="ss-icon">instagram</i></a>
+            <a href="#"><i class="ss-icon">pinterest</i></a>
+            <a href="#"><i class="ss-icon">youtube</i></a>
+
+          </div>
         </div>
 
       </div>
