fixing major problems with mobile version

--- a/Belief Agency Code Challenge/src/index.html
+++ b/Belief Agency Code Challenge/src/index.html
@@ -21,32 +21,37 @@
     <link href="Fonts/ss-social-circle/webfonts/ss-social-circle.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container-fluid pike-place-header">
-      <img src="Images/Seattle-Hero.jpg" />
+
+    <div class="top-nav container">
+      <nav class="green-bg navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <object class="seattle-logo" data="Vectors/SeattleCityLogo.svg" type="image/svg+xml"></object>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li> <a href="#">About</a> </li>
+              <li> <a href="#">Blog</a> </li>
+              <li> <a href="#">History</a> </li>
+              <li> <a href="#">Neighborhoods</a> </li>
+              <li> <a href="#">Contact</a> </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
 
-    <div class="container-fluid top-nav">
-      <div class="container green-bg">
-        <object class="seattle-logo pull-left" data="Vectors/SeattleCityLogo.svg" type="image/svg+xml"></object>
-
-        <ul class="nav nav-pills pull-right">
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Blog</a>
-          </li>
-          <li>
-            <a href="#">History</a>
-          </li>
-          <li>
-            <a href="#">Neighborhoods</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
+    <div class="container-fluid pike-place-header">
+      <img src="Images/Seattle-Hero-cropped.jpg" />
     </div>
 
     <div class="container">
